Edit main.tf, add Jenkins_pipeline.txt

--- a/AWS_projecto/index.html
+++ b/AWS_projecto/index.html
@@ -42,10 +42,8 @@
 	<div class="work section second" id="short_summary">
 		<div class="container">
 			<h3>INFO:</h3>
-				<li><strong>Git: </strong> <a href="https://github.com/srg6rt/DevOps_online_Kyiv_2022Q1Q2">DevOps_tasks_2023</a></li>
-				<li><strong>Git: </strong> <a href="https://github.com/srg6rt/DevOps_final_project2022">DevOps_final_project2022</a></li>
-				<li><strong>Slide: </strong> <a href="https://docs.google.com/presentation/d/159xtGSm9JtaR2O2RLbn0igC8xy6W0fclwBxpxI-SXUI/edit?slide=id.g136a10212d7_0_12">Presentation</a></li>
-				<li><strong>CV: </strong> <a href="http://srg6rt-bucket-1.s3-website.eu-north-1.amazonaws.com">Serhii Pyrynets</a></li>
+				<li><strong>Git: </strong> <a href="https://github.com/srg6rt/DevOps_tasks_2023">DevOps_tasks_2023</a></li>
+				<li><strong>Slide: </strong> <a href="">Presentation</a></li>
 		</div>
 	</div>
 
