--- a/AWS_projecto/index.html
+++ b/AWS_projecto/index.html
@@ -44,6 +44,7 @@
 			<h3>INFO:</h3>
 				<li><strong>Git: </strong> <a href="https://github.com/srg6rt/DevOps_tasks_2023">DevOps_tasks_2023</a></li>
 				<li><strong>Slide: </strong> <a href="">Presentation</a></li>
+				<li><strong>Slide: </strong> <a href="">Presentation</a></li>
 		</div>
 	</div>
 
